# napari-sam-prompt

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_sam_prompt/: __init__.py  __main__.py  _sam_prompt_widget.py  _util.py  napari.yaml
src/napari_sam_prompt/_sub_widgets/: _auto_mask_generator.py  _auto_mask_generator_widget.py  _load_model_widget.py  _predictor_widget.py
src/napari_sam_prompt/_tests/: test_reader.py  test_sample_data.py  test_widget.py
tests/: test_supported_images.py  test_widget.py
